--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -9,8 +9,8 @@ Et polyeder $\mathcal{P} \in \R^n$ indeholder en \textbf{linje}, hvis der eksist
 \noindent
 %
 \textcolor{red}{
-På figur \ref{fig:julieerovergud1} ses et polyeder $\mathcal{P}$, hvor $\mathbf{x} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}$, hvormed polyederet ikke indeholder en linje. 
-På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\mathbf{x} + \lambda \mathbf{d}$ derimod tilhører $\mathcal{P}_2$, således polyederet indeholder en linje.
+På figur \ref{fig:julieerovergud1} ses et polyeder $\mathcal{P}_1$, hvor $\mathbf{v} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}_1$, hvormed polyederet ikke indeholder en linje. 
+På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\mathbf{v} + \lambda \mathbf{d}$ derimod tilhører $\mathcal{P}_2$, således polyederet indeholder en linje.
 }
 \\\\
 \begin{center}
@@ -50,8 +50,8 @@ På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\math
 %\filldraw [black] (b) circle (0.2pt) node[left] {$\mathbf{u}$};
 \filldraw [black] (0.15,0.15,0) circle (0pt) node[above] {$\mathcal{P}_1$};
 
-\filldraw [black] (-0.05,0.55,0) circle (0.2pt) node[anchor=north east] {$\mathbf{x} + \lambda \mathbf{d} $};
-\filldraw [black] (0.1,0.4,0) circle (0.2pt) node[anchor=north east] {$\mathbf{x}$};
+\filldraw [black] (-0.05,0.55,0) circle (0.2pt) node[anchor=north east] {$\mathbf{v} + \lambda \mathbf{d} $};
+\filldraw [black] (0.1,0.4,0) circle (0.2pt) node[anchor=north east] {$\mathbf{v}$};
 % 
 % Koordinatsystemet 
 % -------------------------------------------------------
@@ -61,7 +61,7 @@ På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\math
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 % 
 \end{tikzpicture}
-  \captionof{figure}{Illustration af et polyeder $\mathcal{P}_1$, hvor $\mathbf{x} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}_1$, og dermed indeholder polyederet ikke en linje.}
+  \captionof{figure}{Illustration af et polyeder $\mathcal{P}_1$, hvor $\mathbf{v} + \lambda \mathbf{d}$ ikke tilhører $\mathcal{P}_1$, og dermed indeholder polyederet ikke en linje.}
   \label{fig:julieerovergud1}
 \end{center}
 \end{minipage}
@@ -98,8 +98,8 @@ På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\math
 %\filldraw [black] (b) circle (0.2pt) node[left] {$\mathbf{u}$};
 \filldraw [black] (0.4,0.4,0) circle (0pt) node[above] {$\mathcal{P}_2$};
 
-\filldraw [black] (-0.05,0.55,0) circle (0.2pt) node[anchor=north east] {$\mathbf{x} + \lambda \mathbf{d} $};
-\filldraw [black] (0.1,0.4,0) circle (0.2pt) node[anchor=north east] {$\mathbf{x}$};
+\filldraw [black] (-0.05,0.55,0) circle (0.2pt) node[anchor=north east] {$\mathbf{v} + \lambda \mathbf{d} $};
+\filldraw [black] (0.1,0.4,0) circle (0.2pt) node[anchor=north east] {$\mathbf{v}$};
 % 
 % Koordinatsystemet 
 % -------------------------------------------------------
@@ -109,7 +109,7 @@ På figur \ref{fig:julieerovergud2} ses et polyeder $\mathcal{P}_2$, hvor $\math
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 % 
 \end{tikzpicture}
-  \captionof{figure}{Illustration af et polyeder $\mathcal{P}_2$, hvor $\mathbf{x} + \lambda \mathbf{d}$ tilhører $\mathcal{P}_2$, og dermed indeholder polyederet en linje.}
+  \captionof{figure}{Illustration af et polyeder $\mathcal{P}_2$, hvor $\mathbf{v} + \lambda \mathbf{d}$ tilhører $\mathcal{P}_2$, og dermed indeholder polyederet en linje.}
   \label{fig:julieerovergud2}
 \end{center}
 \end{minipage}
