--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -66,7 +66,11 @@ Som følge af \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af 
 \end{enumerate}
 %
 Findes en ikke-negativ løsning ved denne procedure, så er løsningen en basal mulig løsning.
-\textcolor{red}{Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for \textit{basale søjler}, og variablerne $x_{B(1)},\ldots,x_{B(m)}$ kaldes for \textit{basale variable}. De resterende søjler i $A$ kaldes derimod \textit{ikke-basale søjler} og de resterende variabler kaldes \textit{ikke-basale variable}. }
+\textcolor{red}{Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for \textit{basale søjler}, og variablerne $x_{B(1)},\ldots,x_{B(m)}$ kaldes for \textit{basale variable}. De resterende søjler i $A$ kaldes derimod \textit{ikke-basale søjler} og de resterende variabler kaldes \textit{ikke-basale variable}. 
+Mængden $\{ B(1),\ldots,B(m) \}$ kaldes løsningens \textit{base}, hvor elementerne kaldes for \textit{basale index}. 
+Dertil kaldes $B$ \textit{basismatricen}, hvor $B= [ \textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)} ] $.
+Hertil defineres basisvektoren $\mathbf{x}_B = ( x_{B(1)},\ldots,x_{B(m)})^T.$
+Eftersom de basale søjler er lineært uafhængige, har $B$ en invers matrix $B^{-1}$. }
 Hvert valg af de lineært uafhængige søjler svarer til forskellige baser for rummet.
 \\\\
 %
