--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -34,7 +34,7 @@ På figur \ref{fig:julieerikkedum} kan løsningsmængden, markeret med blå, for
 %
 Ethvert punkt i løsningsmængden, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$, undersøges for at finde den optimale løsning.
 Dette illustreres ved en linje, der er beskrevet af ligningen $x_1+x_2=k$ for maksimumsproblemet i \ref{eks:min_loes}. 
-Dette betyder, at den optimale løsning, som enten maksimerer eller minimerer værdien af objektfunktionen kan findes grafisk ved at indtegne niveaukurver $f(x_1, x_2)=k$, og forskyde disse niveaukurver i den retning, der optimerer værdien af objektfunktionen, indtil den optimale løsning opnås.  
+Dette betyder, at den optimale løsning, som enten maksimerer eller minimerer omkostningen kan findes grafisk ved at indtegne niveaukurver $f(x_1, x_2)=k$, og forskyde disse niveaukurver i den retning, der optimerer omkostningen, indtil den optimale løsning opnås.  
 Med udgangspunkt i \ref{eks:min_loes}, er denne linje vinkelret på vektoren 
 %
 $$
@@ -103,11 +103,11 @@ axis lines = left,
 \noindent
 %
 Betragt figur \ref{fig:opti_loes}. 
-I det hjørne, hvor den optimale løsning findes, maksimeres værdien af objektfunktionen, der repræsenterer præcis én løsning til maksimumsproblemet. 
+I det hjørne, hvor den optimale løsning findes, maksimeres omkostningen, der repræsenterer præcis én løsning til maksimumsproblemet. 
 Antag nu, at den ene koefficient i objektfunktion er rykket, eller at den ene begrænsning er skiftet, så den ligger parallelt med niveaukurven, og vinkelret på vektoren $\textbf{v}$.
 Dette medfører, at der findes uendeligt mange optimale løsninger til maksimumsproblemet, eftersom den optimale niveaukurve skærer løsningsmængden i uendeligt mange punkter.
 På figur \ref{fig:opti_loes2} introduceres et eksempel, hvor der findes et uendeligt antal løsninger, der
-maksimerer værdien af objektfunktionen. 
+maksimerer omkostningen. 
 %
 \newline
 \phantom{Hej}
@@ -134,7 +134,7 @@ Antag nu, at det lineære programmeringsproblem i stedet er ubegrænset opadtil.
 Dette scenarie er illustreret på figur \ref{fig:opti_loes4}.
 %
 Dette betyder, at betingelserne ikke begrænser, hvor stor
-værdien af objektfunktionen kan blive. 
+omkostningen kan blive. 
 Derfor er den optimale løsning $\infty$.
 %
 \phantom{Hej}
