Update apend_b.tex, under_bas_dim.tex, and 3 more files...

--- a/incl/main/appendicer/apend_b.tex
+++ b/incl/main/appendicer/apend_b.tex
@@ -18,14 +18,14 @@ Egenskaber for lineært afhængige og uafhængige mængder.
 Antag, at spannet $\S$ af vektorene $\textbf{v}_1,\ldots,\textbf{v}_c$ har dimension $m$.
 Så gælder, at
 \begin{enumerate}[label=(\alph*)]
-\item Der eksisterer en base af $\S$ bestående af $m$ af vektorene $\mathbf{v}_1,\ldots,\mathbf{v}_c$.
-\item Hvis $k\leq m$ og $\mathbf{v}_1,\ldots,\mathbf{v}_k$ er lineært uafhængige, kan der skabes en base $\S$ ved $\mathbf{v}_1,\ldots,\mathbf{v}_k$, hvor der ligeledes vælges $m-k$ af vektorene $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$.
+\item Der eksisterer en basis af $\S$ bestående af $m$ af vektorene $\mathbf{v}_1,\ldots,\mathbf{v}_c$.
+\item Hvis $k\leq m$ og $\mathbf{v}_1,\ldots,\mathbf{v}_k$ er lineært uafhængige, kan der skabes en basis $\S$ ved $\mathbf{v}_1,\ldots,\mathbf{v}_k$, hvor der ligeledes vælges $m-k$ af vektorene $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$.
 \end{enumerate}
 \end{thm}
 
 \begin{proof}
 Da (a) er et tilfælde af (b), hvor $k=0$, er beviset for (b) tilstrækkeligt.
-Hvis alle vektorer $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$ kan opnås som linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, så er alle vektorer i $\mathbf{v}_{1},\ldots,\textbf{v}_c$ ligeledes en linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, hvor $\mathbf{v}_1,\ldots,\mathbf{v}_k$ udgør en base.
+Hvis alle vektorer $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$ kan opnås som linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, så er alle vektorer i $\mathbf{v}_{1},\ldots,\textbf{v}_c$ ligeledes en linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, hvor $\mathbf{v}_1,\ldots,\mathbf{v}_k$ udgør en basis.
 Såfremt dette ikke er tilfældet, gælder det, at en eller flere vektorer i $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$ ikke er linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$. 
 Der udvælges nu en lineær uafhængig vektor i $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$.
 Derved opnås der en mængde bestående af $k+1$ lineært uafhængige vektorer fra $\mathbf{v}_{1},\ldots,\mathbf{v}$.
