--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -111,7 +111,7 @@ Værdimængden af en lineær afbildning er det samme som søjlerummet af dens st
 %
 \subsection{Basis}
 Mens et underrum kan beskrives med en given mængde vektorer, så er det fordelagtigt at beskrive det med så få vektorer som muligt. 
-Denne mængde kaldes \textit{basis} for underrummet.
+Denne mængde kaldes en \textit{basis} for underrummet.
 %
 \begin{defn}{}{basisunderrum}
 Lad $\mathcal{P}$ være et ikke-nul-underrum af $\R^n$. 
@@ -119,10 +119,10 @@ En \textbf{basis} for $\mathcal{P}$ er en lineært uafhængig mængde af \textbf
 \end{defn}
 \noindent
 Eksempelvis kan en mængde af standardvektorer $\{\textbf{e}_1,\textbf{e}_2,\ldots,\textbf{e}_n\}$ bruges som basis for $\R^n$.
-Denne type basis kaldes for \textit{standard basis}.
+Denne type basis kaldes for en \textit{standard basis}.
 Der findes dog flere mulige baser for det samme underrum.
 %
-Pivotsøjlerne i en matrix udgør basis for dens søjlerum.
+Pivotsøjlerne i en matrix udgør en basis for dens søjlerum.
 Dette følger af \ref{lem:pivotu} i appendicer.
 %
 \begin{thm}{}{}
