--- a/incl/main/simplex_metoden/geometrisktilgang.tex
+++ b/incl/main/simplex_metoden/geometrisktilgang.tex
@@ -52,7 +52,7 @@ Eftersom $\mathbf{d}_j = 1$ og $\mathbf{d}_i = 0$, så er
 & =  \mathbf{A}_j  + B \mathbf{d}_B.
 \end{align*}
 %
-Da basis matricen $B$ er invertibel, haves at
+Da basismatricen $B$ er invertibel, haves at
 % 
 \begin{align*}
 \mathbf{A}_j  + B \mathbf{d}_B & = 0 \\
@@ -246,7 +246,7 @@ Bevis udelades.
 \\
 %
 Dermed er alle basale retninger mulige retninger, hvis et problem er givet uden degenererede løsninger. 
-Heraf defineres \textit{optimal basismatrix}.}
+Heraf defineres en \textit{optimal basismatrix}.}
 %
 % Definition 3.3 
 \begin{defn}{}{julieergudenoveralleguder}
