Update Procesanalyse seneste.doc, Lineaer_afbilding.tex, and 7 more files...

--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -34,6 +34,7 @@ Dermed er $B=C$ og $A$'s invers er derfor entydig.
 Da inversen er entydig, vil denne kaldes $A^{-1}$.
 Såfremt $A$ er en invertibel $n \times n$ matrix, gælder det for ethvert $\mathbf{b} \in \R^n$, at $A\textbf{x}=\mathbf{b}$ har den entydige løsning $A^{-1}\mathbf{b}$.
 Inverse matricer har en række egenskaber, som er formuleret i \ref{thm:mxinvers}. 
+\newpage
 %
 \begin{thm}{}{mxinvers}
 Givet to $m \times n$ matricer $A$ og $B$, så gælder, at:
