--- a/incl/main/simplex_metoden/pivoterings_lokke.tex
+++ b/incl/main/simplex_metoden/pivoterings_lokke.tex
@@ -56,7 +56,7 @@ Det følger, at ethvert valg af pivotering via den lexicografiske metode er enty
 Dette er i strid med antagelsen om, at rækkerne er lineært uafhængige.
 %
 \begin{thm}{}{}
-Antag, at simplexmetoden starter med, at alle rækker i en $m \times n$ simplextabel foruden rækken med objektfunktionen, den $m$'te række, er lexicografisk positive.
+Antag, at simplexmetoden starter med, at alle rækker i en $m \times n$ simplextabel foruden rækken med omkostningsvektoren, den $m$'te række, er lexicografisk positive.
 Hvis den lexicografiske metode til at vælge pivotering er fulgt, så gælder det, at
 %
 \begin{enumerate}[label=(\alph*)]
