Update bevis.tex, konveksfunktion.tex, and 3 more files...

--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -1,6 +1,8 @@
 \section{Konvekse mængder}
 \label{julieerlakker}
 %
+\input{fig/tikz/geometri/konveksfunktion}
+%
 I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
 %
 \begin{defn}{}{konveks}
