--- a/fig/tikz/geometri/konveksfunktion.tex
+++ b/fig/tikz/geometri/konveksfunktion.tex
@@ -5,17 +5,13 @@
 \begin{center}
 % 
 \begin{tikzpicture}[scale=0.7]
-% Koordinater
-% -------------------------------------------------------
-
 %
 % Punkter og linje 
 % -------------------------------------------------------
-\draw[very thick, color = myblue] (1,3,0) .. controls (3,5,0) and (45,5,0) .. (7,3,0);
-%\draw[very thick, color=myred] (0.1,0.5,0) .. controls (0.3,0.8,0) and (0.6,0.1,0) .. (0.7,0.4,0);
-
-\draw[very thick, color=myred] (9,5,0) .. controls (11,8,0) and (14,1,0) .. (15,3,0);
-%
+\draw[very thick, color = myblue] (1,3,0) .. controls (3,5,0) and (4.5,5,0) .. (7,3,0);
+\draw[very thick, color=myred] (9,5,0) .. controls (10,8,0) and (11,1,0) .. (12,3,0);
+\draw[very thick, color=myred] (15,5,0) .. controls (14,8,0) .. (12,3,0);
+% and (13,3,0)
 %
 \end{tikzpicture}
   \captionof{figure}{En konveks funktion markeret med blå, og en ikke-konveks funktion markeret med rød.}
